cabal-version:      3.12
name:               sqlite-uuid
version:            0.3.0.0
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         git@dandart.co.uk

-- copyright:
-- category:
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:    DB.Instances.UUID

  -- other-extensions:
  build-depends:
    , base           >=4.21 && <4.23
    , sqlite-simple  ^>=0.4.19
    , uuid-types     ^>=1.0.6

  hs-source-dirs:     lib
  default-language:   GHC2024
  default-extensions:
    NoGeneralisedNewtypeDeriving
    OverloadedStrings
    UnicodeSyntax

  ghc-options:
    -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-unrecognised-warning-flags -Wno-missed-specialisations

test-suite sqlite-uuid-test
  if (arch(javascript) || arch(wasm32))
    buildable: False

  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  default-language:   GHC2024
  default-extensions:
    NoGeneralisedNewtypeDeriving
    OverloadedStrings
    UnicodeSyntax

  main-is:            Spec.hs

  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  ghc-options:
    -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-unrecognised-warning-flags -Wno-missed-specialisations

  build-depends:
    , base   >=4.21 && <4.23
    , hspec  ^>=2.11.15

  -- , sqlite-uuid
  -- , hspec-core
  -- , hspec-expectations
  -- , HUnit
  -- , QuickCheck
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:      MainSpec
